load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_rust//rust:defs.bzl", "rust_library")

py_binary(
    name = "syscall_kernel_gen_tool",
    srcs = ["syscall_kernel_gen.py"],
    main = "syscall_kernel_gen.py",
    precompile = "disabled",
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = ["//kernel/api/syscalls:syscall_lib"],
)

alias(
    name = "syscalls.toml",
    actual = "//kernel/api/syscalls:syscalls.toml",
)

alias(
    name = "errors.toml",
    actual = "//kernel/api/syscalls:errors.toml",
)

genrule(
    name = "syscall_kernel_gen",
    srcs = [
        ":errors.toml",
        ":syscalls.toml",
    ],
    outs = ["syscall_gen.rs"],
    cmd = "$(location :syscall_kernel_gen_tool) $(location :syscalls.toml) $(location :errors.toml) > $@",
    tools = [":syscall_kernel_gen_tool"],
)

rust_library(
    name = "syscalls",
    srcs = [
        ":syscall_kernel_gen",
    ],
    crate_name = "syscalls_rust",
    crate_root = "syscall_gen.rs",
    edition = "2024",
    target_compatible_with = ["@//platforms:kernel_mode"] + select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:uefi",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }),
    visibility = ["//kernel:__subpackages__"],
    deps = [
    ],
)
