load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "libsyscall",
    srcs = ["syscalls.c"],
    hdrs = ["syscalls.h"],
    target_compatible_with = select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:none",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }) + ["//platforms:user_mode"],
    visibility = ["//visibility:public"],
    deps = [
        "//kernel/api/syscalls",
        "@freestnd_c_hdrs",
    ],
)
