load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_rust_bindgen//:defs.bzl", "rust_bindgen_library")

cc_library(
    name = "init_contract",
    srcs = ["init_dummy.c"],
    hdrs = [
        "boot_info.h",
    ],
    target_compatible_with = select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:uefi",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }) + select({
        "//platforms:kernel_mode": ["//platforms:kernel_mode"],
        "//platforms:user_mode": ["//platforms:user_mode"],
    }),
    deps = ["@freestnd-c-hdrs//:freestnd-c-hdrs"],
    visibility = ["//visibility:public"],
)

rust_bindgen_library(
    name = "init_contract_rust",
    bindgen_flags = [
        "--rust-edition",
        "2024",
        "--rust-target",
        "1.94.0",
        "--use-core",
        "--raw-line",
        "#![no_std]",
        "--raw-line",
        "#![allow(non_upper_case_globals)]",
        "--raw-line",
        "#![allow(non_camel_case_types)]",
        "--raw-line",
        "#![allow(non_snake_case)]",
    ],
    cc_lib = ":init_contract",
    clang_flags = [
        "-nostdinc",
        "-ffreestanding",
        "-Iexternal/+git_repository+freestnd-c-hdrs/include",
    ],
    edition = "2024",
    header = "boot_info.h",
    target_compatible_with = select({
        "//platforms:kernel_mode": ["@//platforms:kernel_mode"],
        "//platforms:user_mode": ["@//platforms:user_mode"],
    }) + select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:uefi",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }),
    visibility = [
        "//kernel/core:__subpackages__",
        "//init:__subpackages__",
    ],
)
