load("@bazel_skylib//lib:selects.bzl", "selects")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_rust_bindgen//:defs.bzl", "rust_bindgen_library")

selects.config_setting_group(
    name = "kernel_x86_64",
    match_all = [
        "@platforms//cpu:x86_64",
        "@platforms//os:none",
        "//platforms:kernel_mode",
    ],
)

selects.config_setting_group(
    name = "user_x86_64",
    match_all = [
        "@platforms//cpu:x86_64",
        "@platforms//os:none",
        "//platforms:user_mode",
    ],
)

selects.config_setting_group(
    name = "kernel_aarch64",
    match_all = [
        "@platforms//cpu:aarch64",
        "@platforms//os:uefi",
        "//platforms:kernel_mode",
    ],
)

selects.config_setting_group(
    name = "user_aarch64",
    match_all = [
        "@platforms//cpu:aarch64",
        "@platforms//os:none",
        "//platforms:user_mode",
    ],
)

cc_library(
    name = "init_contract",
    srcs = ["init_dummy.c"],
    hdrs = [
        "boot_info.h",
    ],
    target_compatible_with = select({
        ":kernel_x86_64": [":kernel_x86_64"],
        ":user_x86_64": [":user_x86_64"],
        ":kernel_aarch64": [":kernel_aarch64"],
        ":user_aarch64": [":user_aarch64"],
    }),
    visibility = ["//visibility:public"],
    deps = ["@freestnd-c-hdrs//:freestnd-c-hdrs"],
)

rust_bindgen_library(
    name = "init_contract_rust",
    bindgen_flags = [
        "--rust-edition",
        "2024",
        "--rust-target",
        "1.94.0",
        "--use-core",
        "--raw-line",
        "#![no_std]",
        "--raw-line",
        "#![allow(non_upper_case_globals)]",
        "--raw-line",
        "#![allow(non_camel_case_types)]",
        "--raw-line",
        "#![allow(non_snake_case)]",
    ],
    cc_lib = ":init_contract",
    clang_flags = [
        "-nostdinc",
        "-ffreestanding",
        "-Iexternal/+git_repository+freestnd-c-hdrs/include",
    ],
    edition = "2024",
    header = "boot_info.h",
    target_compatible_with = select({
        ":kernel_x86_64": [":kernel_x86_64"],
        ":user_x86_64": [":user_x86_64"],
        ":kernel_aarch64": [":kernel_aarch64"],
        ":user_aarch64": [":user_aarch64"],
    }),
    visibility = [
        "//init:__subpackages__",
        "//kernel/core:__subpackages__",
    ],
)
