load("@bazel_skylib//lib:selects.bzl", "selects")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

selects.config_setting_group(
    name = "kernel_x86_64",
    match_all = [
        "@platforms//cpu:x86_64",
        "@platforms//os:none",
        "//platforms:kernel_mode",
    ],
)

selects.config_setting_group(
    name = "user_x86_64",
    match_all = [
        "@platforms//cpu:x86_64",
        "@platforms//os:none",
        "//platforms:user_mode",
    ],
)

selects.config_setting_group(
    name = "kernel_aarch64",
    match_all = [
        "@platforms//cpu:aarch64",
        "@platforms//os:uefi",
        "//platforms:kernel_mode",
    ],
)

selects.config_setting_group(
    name = "user_aarch64",
    match_all = [
        "@platforms//cpu:aarch64",
        "@platforms//os:none",
        "//platforms:user_mode",
    ],
)

cc_library(
    name = "syscalls",
    srcs = ["syscalls_dummy.c"] + glob(["*.h"]),
    hdrs = [
        "syscall_err_list.h",
        "syscall_errs.h",
        "syscall_list.h",
        "syscall_nums.h",
    ],
    target_compatible_with = select({
        ":kernel_x86_64": [":kernel_x86_64"],
        ":user_x86_64": [":user_x86_64"],
        ":kernel_aarch64": [":kernel_aarch64"],
        ":user_aarch64": [":user_aarch64"],
    }),
    visibility = ["//visibility:public"],
    deps = ["@freestnd-c-hdrs//:freestnd-c-hdrs"],
)
