load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "syscall_lib",
    srcs = ["syscall_parser.py"],
    imports = ["."],
    # Disable precompilation to avoid searching for a target-platform Python toolchain
    precompile = "disabled",
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "errors.toml",
        "syscalls.toml",
    ],
    visibility = ["//visibility:public"],
)
